--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
+<h2>
 
+    <br><a href="about.html">About </a>
+
+</h2>
+<h2>
+
+    <br><a href="projects.html">Projects </a>
+
+</h2>
+<h3>
+
+</h3>
+<h1>
+    <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    <br>Ut enim ad minim veniam,
+    <br>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    <br>Excepteur sint occaecat cupidatat non proident,
+    <br>sunt in culpa qui officia deserunt mollit anim id est laborum."
+</h1>
 </body>
 </html>
