--- a/project1.html
+++ b/project1.html
@@ -7,18 +7,19 @@
 <body>
 
 <h2>
-
+    <br><a href="index.html">Home </a>
 </h2>
 <h2>
-
+    <br><a href="about.html">About </a>
 </h2>
 <h2>
-
+    <br><a href="projects.html">Projects </a>
 </h2>
 <h2>
-
+    <br><a href="project2.html">Project 2</a>
 </h2>
 <h1>
+
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
