--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,16 @@
 <body>
 
 <h2>
-
     <br><a href="index.html">Home </a>
-
 </h2>
 <h2>
-
     <br><a href="about.html">About </a>
-
+</h2>
+<h2>
+    <br><a href="project1.html">Project 1 </a>
+</h2>
+<h2>
+    <br><a href="project2.html">Project 2 </a>
 </h2>
 <h1>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
