--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
 
 </h2>
 <h1>
+    <br>About
+    <br>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
