--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 </h3>
 <h1>
+    <br>Home
+    <br>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
