--- a/project1.html
+++ b/project1.html
@@ -19,7 +19,8 @@
     <br><a href="project2.html">Project 2</a>
 </h2>
 <h1>
-
+    <br>Project 1
+    <br>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
