--- a/project2.html
+++ b/project2.html
@@ -19,6 +19,8 @@
     <br><a href="project1.html">Project 1</a>
 </h2>
 <h1>
+    <br>Project 2
+    <br>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
