--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,8 @@
     <br><a href="project2.html">Project 2 </a>
 </h2>
 <h1>
+    <br>Projects
+    <br>
     <br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     <br>Ut enim ad minim veniam,
